package donaciones.domain;

public enum Categoria {
    ALIMENTOS,
    MUEBLES,
    ROPA,
    ELECTRODOMESTICOS
}
